tests/baselines/reference/isolatedModulesExportDeclarationType.errors.txt
/test2.ts(1,10): error TS2440: Import declaration conflicts with local declaration of 'T'.
/test2.ts(3,16): error TS1292: 'T' resolves to a type and must be marked type-only in this file before re-exporting when 'isolatedModules' is enabled. Consider using 'export type { T as default }'.
/test3.ts(2,16): error TS1292: 'T' resolves to a type and must be marked type-only in this file before re-exporting when 'isolatedModules' is enabled. Consider using 'export type { T as default }'.


==== /type.ts (0 errors) ====
    export type T = number;
    
==== /test1.ts (0 errors) ====
    import { T } from "./type";
    const T = 0;      // Error as of #56354
    export default T; // Ok
    
==== /test2.ts (2 errors) ====
    import { T } from "./type";
             ~
!!! error TS2440: Import declaration conflicts with local declaration of 'T'.
    type T = number;  // Merge error
    export default T; // Transpiler could assume the alias resolves to a value?
                   ~
!!! error TS1292: 'T' resolves to a type and must be marked type-only in this file before re-exporting when 'isolatedModules' is enabled. Consider using 'export type { T as default }'.
    
==== /test3.ts (1 errors) ====
    import { T } from "./type";
    export default T; // Error
                   ~
!!! error TS1292: 'T' resolves to a type and must be marked type-only in this file before re-exporting when 'isolatedModules' is enabled. Consider using 'export type { T as default }'.
    